Update ExcelParser.java